# c-goof

./: CMakeLists.txt
.github/workflows/: main.yml
